# pycharm-poetry-issue

./: pyproject.toml
src/my_package/: main.py
